1. Метод .of [#373650]