@@ -17,7 +17,7 @@ public class NotifyAccountTest {
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001")
         );
-        HashSet<Account> expect = new HashSet<>(Arrays.asList(
+        HashSet<Account> expect = new HashSet<>(List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001")
         ));
@@ -31,7 +31,7 @@ public class NotifyAccountTest {
                 new Account("142", "Petr Arsentev", "000001"),
                 new Account("142", "Petr Arsentev", "000001")
         );
-        HashSet<Account> expect = new HashSet<>(Arrays.asList(
+        HashSet<Account> expect = new HashSet<>(List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
                 new Account("142", "Petr Arsentev", "000001")
         ));
